--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
 *{
 margin: 0;
 padding: 0;
 box-sizing: border-box;
+}
+
+body::before{
+    display: block;
+    content: '';
+    height: 60px;
+}
+
+img{
+    width: 400px;
+    height: 400px;
+}
+
+
+
+@media(min-width: 768px){
+    .news-input{
+        width: 50%;
+    }
 }
