--- a/style.css
+++ b/style.css
@@ -1,26 +1,274 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+@import "form.css";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body::before{
+/* body::before{
     display: block;
     content: '';
     height: 60px;
+} */
+
+.logo {
+  width: 100px;
+  height: auto;
 }
 
-img{
-    width: 400px;
-    height: 400px;
+.flex-row {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+.flex-col-3 {
+  flex-basis: 40%;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  padding-left: 30px;
+}
+
+nav {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ gap: 70px;
+}
+
+a {
+  color: #a31519;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #fff;
+  margin: 0 0 1.5rem;
+}
+
+i {
+  font-size: 1.3rem;
+}
+
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
 }
 
 
+header nav li {
+  margin: 0 25px;
+}
 
-@media(min-width: 768px){
-    .news-input{
-        width: 50%;
-    }
+a.btn {
+  color: #fff;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.flex-form input[type="submit"] {
+  background: #a31519;
+  border: 1px solid #a31519;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.flex-form input[type="submit"]:hover {
+  background: #d73851;
+  border: 1px solid #d73851;
+}
+
+.flex-form {
+  display: -webkit-box;
+  display: flex;
+  width: 300px;
+  border-radius: 30px;
+  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.flex-form > * {
+  border: 0;
+  padding: 0 0 0 10px;
+  line-height: 40px;
+  font-size: 1rem;
+  border-radius: 0;
+  outline: 0;
+  -webkit-appearance: none;
+  border-radius: 30px;
+}
+
+
+img {
+  width: 400px;
+  height: 400px;
+}
+
+.button {
+  color: #ffffff;
+  background-color: #a31519;
+  padding: 12px 50px;
+  margin-top: 15px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border: 0;
+  border-radius: 8px;
+  outline: 0;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.button:hover,
+.button:active,
+.button:focus {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+textarea,
+input,
+select {
+  width: 90%;
+  min-height: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  letter-spacing: 0.5px;
+  border: 0;
+  border-bottom: 2px solid #f0f0f0;
+}
+input:valid {
+  border-color: red;
+}
+textarea:focus,
+input:focus {
+  outline: none;
+  border-color: #a31519;
+}
+
+select {
+  border-radius: 4px;
+  margin-top: 15px;
+}
+
+.form-list {
+  padding-left: 0;
+  list-style: none;
+}
+.form-list__row {
+  margin-bottom: 10px;
+}
+.form-list__row label {
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 11px;
+  letter-spacing: 0.5px;
+  color: #3e3e3e;
+  font-weight: bold;
+}
+
+.form-list__row--inline {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.form-list__row--inline > :first-child {
+  -ms-flex: 2;
+  -webkit-box-flex: 2;
+  flex: 2;
+  padding-right: 20px;
+}
+.form-list__row--inline > :nth-child(2n) {
+  -ms-flex: 1;
+  -webkit-box-flex: 1;
+  flex: 1;
+}
+.form-list__input-inline {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.form-list__input-inline > * {
+  width: 70%;
+}
+
+.form-container {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  margin: auto;
+  width: 90%;
+  min-height: 400px;
+  margin-top: 50px;
+  margin-bottom: 125px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
+}
+
+.form-featured {
+  position: relative;
+  -ms-flex: 3;
+  -webkit-box-flex: 1;
+  flex: 1;
+  min-width: 230px;
+  padding: 20px;
+  overflow: hidden;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.form-product {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  max-width: 85%;
+  -webkit-transform: translateX(calc(-50% - 10px));
+  transform: translateX(calc(-50% - 10px));
+}
+.form-content {
+  -ms-flex: 3;
+  -webkit-box-flex: 3;
+  flex: 3;
+}
+
+textarea {
+  border: 1px solid grey;
+  border-radius: 12px;
+  height: 100px;
+}
+
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
 }
