--- a/style.css
+++ b/style.css
@@ -552,7 +552,31 @@ textarea {
   }
 }
 
-@media only screen and (max-width: 1112px){
+@media only screen and (max-width: 1208px){
+
+  ul {
+    justify-content: center;
+    align-items: center;
+    padding-left: 15px;
+  }
+  
+  nav {
+    justify-content: space-between;
+    align-items: center;
+    gap: 35px;
+  }
+
+  .flex-form {
+    display: -webkit-box;
+    display: flex;
+    width: 200px;
+    border-radius: 30px;
+    box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media only screen and (max-width: 1138px){
+
   .hero-col-2-right{
     display: none;
   }
@@ -569,6 +593,16 @@ textarea {
   }
   
 }
+
+@media only screen and (max-width: 1046px){
+  ul, .flex-form{
+    display: none;
+  }
+.menu{
+  display: block;
+}
+
+  }
 
 @media only screen and (max-width: 480px){
   .flex-col, .who-we-are .flex-col, .products .flex-row, .image-row{
