--- a/style.css
+++ b/style.css
@@ -54,19 +54,18 @@ nav {
 }
 
 a {
-  color: #A31519;
+  color: #a31519;
   text-decoration: none;
   cursor: pointer;
 }
 
-
-.menu, .menu-close{
+.menu,
+.menu-close {
   width: 48px;
   height: 48px;
   display: none;
   cursor: pointer;
 }
-
 
 h1 {
   font-size: 2.1rem;
@@ -80,7 +79,7 @@ h2 {
   margin: 10px 0 1.5rem;
 }
 
-h3{
+h3 {
   font-size: 1.4rem;
   font-weight: 700;
   margin: 10px 0 1.5rem;
@@ -130,7 +129,6 @@ header .flex-row {
 header nav li {
   margin: 0 25px;
 }
-
 
 .text-left {
   align-items: flex-start;
@@ -187,7 +185,7 @@ header nav li {
 
 .hero-button {
   color: #ffffff;
-  background-color: #A31519;
+  background-color: #a31519;
   padding: 20px 50px;
   margin-top: 15px;
   font-size: 1rem;
@@ -200,14 +198,14 @@ header nav li {
 }
 
 .hero-button-2 {
-  color: #A31519;
+  color: #a31519;
   background-color: #fff;
   padding: 20px 50px;
   margin-top: 15px;
   margin-left: 20px;
   font-size: 1rem;
   letter-spacing: 1px;
-  border: 1px solid #A31519;
+  border: 1px solid #a31519;
   border-radius: 8px;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
   -webkit-transition: all 0.2s;
@@ -251,7 +249,7 @@ header nav li {
   background-image: linear-gradient(315deg, #fffcff 74%, #d5fefd 0%);
 }
 
-.who-we-are .flex-col{
+.who-we-are .flex-col {
   width: 70%;
   padding: 50px;
 }
@@ -268,7 +266,7 @@ header nav li {
   gap: 20px;
 }
 
-.image-row{
+.image-row {
   width: 90%;
   display: flex;
   gap: 20px;
@@ -277,7 +275,7 @@ header nav li {
   flex-wrap: wrap;
 }
 
-.partner-image{
+.partner-image {
   width: 150px;
   height: 100px;
   margin: 0 auto;
@@ -286,13 +284,13 @@ header nav li {
   justify-content: center;
 }
 
-.partner-image img{
+.partner-image img {
   height: auto;
-  width: 100%
+  width: 100%;
 }
 
 .flex-form input[type="submit"] {
-  background: #A31519;
+  background: #a31519;
   border-radius: 30px;
   color: #fff;
   cursor: pointer;
@@ -328,7 +326,7 @@ header nav li {
 }
 
 .footer-left {
-  background-color: #A31519;
+  background-color: #a31519;
   flex-basis: 60%;
   display: flex;
   flex-direction: column;
@@ -364,48 +362,48 @@ header nav li {
   flex-wrap: wrap;
 }
 
-.footer-left .footer-row{
+.footer-left .footer-row {
   width: 70%;
   justify-content: space-around;
   row-gap: 30px;
 }
 
-.footer-col p{
+.footer-col p {
   margin-right: 300px;
 }
 .footer p {
   margin: 3px;
 }
 
-hr{
+hr {
   color: white;
   width: 80%;
   margin: 10px;
 }
 
-span{
+span {
   color: grey;
   font-weight: bold;
   font-size: 1.2rem;
 }
 
-i{
+i {
   margin-right: 10px;
 }
 
-.facebook{
-  color: #4267B2;
+.facebook {
+  color: #4267b2;
 }
 
-.linkedin{
+.linkedin {
   color: #0077b5;
 }
-.twitter{
-  color: #1DA1F2
+.twitter {
+  color: #1da1f2;
 }
 
-.google{
-  color: #DB4437;
+.google {
+  color: #db4437;
 }
 
 .footer-form input[type="submit"] {
@@ -440,8 +438,8 @@ i{
 textarea,
 input,
 select {
-  width: 90%;
-  min-height: 30px;
+  width: 60%;
+  min-height: 20px;
   padding-left: 5px;
   padding-right: 5px;
   letter-spacing: 0.5px;
@@ -452,7 +450,7 @@ select {
 textarea:focus,
 input:focus {
   outline: none;
-  border-color: #A31519;
+  border-color: #a31519;
 }
 
 select {
@@ -460,53 +458,14 @@ select {
   margin-top: 15px;
 }
 
-.form-list {
-  padding-left: 0;
-  list-style: none;
-}
-.form-list__row {
-  margin-bottom: 10px;
-}
-.form-list__row label {
+label {
   position: relative;
-  display: block;
+  display: inline-block;
   text-transform: uppercase;
-  font-weight: 600;
-  font-size: 11px;
-  letter-spacing: 0.5px;
+  font-size: 12px;
   color: #3e3e3e;
   font-weight: bold;
-}
-
-.form-list__row--inline {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-pack: justify;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-.form-list__row--inline > :first-child {
-  -ms-flex: 2;
-  -webkit-box-flex: 2;
-  flex: 2;
-  padding-right: 20px;
-}
-.form-list__row--inline > :nth-child(2n) {
-  -ms-flex: 1;
-  -webkit-box-flex: 1;
-  flex: 1;
-}
-.form-list__input-inline {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-pack: justify;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-}
-.form-list__input-inline > * {
-  width: 70%;
+  margin-top: 10px;
 }
 
 .form-container {
@@ -514,10 +473,11 @@ select {
   display: -webkit-box;
   display: flex;
   margin: auto;
-  width: 90%;
+  width: 80%;
+  max-width: 1000px;
   min-height: 400px;
   margin-top: 50px;
-  margin-bottom: 125px;
+  margin-bottom: 50px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
@@ -525,7 +485,7 @@ select {
 
 .form-featured {
   position: relative;
-  -ms-flex: 3;
+  -ms-flex: 1;
   -webkit-box-flex: 1;
   flex: 1;
   min-width: 230px;
@@ -537,79 +497,136 @@ select {
 
 .form-product {
   position: absolute;
-  top: 0;
+  top: 18%;
   left: 50%;
   max-width: 85%;
   -webkit-transform: translateX(calc(-50% - 10px));
   transform: translateX(calc(-50% - 10px));
 }
+
 .form-content {
   -ms-flex: 3;
   -webkit-box-flex: 3;
   flex: 3;
+  padding: 20px 30px;
+}
+
+.form-item{
+  text-align: center;
+}
+
+.form-circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 200%;
+  width: 200%;
+  background-color: #a31519;
+  border-radius: 50%;
+  -webkit-transform: translateX(-50%) translateY(-25%);
+  transform: translateX(-50%) translateY(-25%);
+}
+
+input,
+textarea,
+select {
+  width: calc(100% - 10px);
+  min-height: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  letter-spacing: 3.5px;
+  border: 0;
+  border-bottom: 2px solid #f0f0f0;
+}
+input:required {
+  border-color: #a31519;
+}
+input:valid {
+  border-color: green;
+}
+input:focus {
+  outline: none;
+  border-color: #333;
 }
 
 textarea {
-  border: 1px solid grey;
-  border-radius: 12px;
   height: 100px;
+  border: 2px solid #a31519;
+  border-radius: 12px;
+  margin-top: 10px;
 }
 
-@media (min-width: 768px) {
-  .news-input {
-    width: 50%;
-  }
+select {
+  height: 40px;
 }
 
-@media only screen and (max-width: 1288px){
+.send-button {
+  padding: 7px 30px;
+  border-radius: 8px;
+  border: none;
+  background: #a31519;
+  color: #fff;
+  cursor: pointer;
+}
 
+.send-button:hover{
+  background: red;
+}
+
+@media only screen and (max-width: 1315px) {
   ul {
-    justify-content: center;
-    align-items: center;
     padding-left: 15px;
   }
-  
+
   nav {
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 35px;
   }
-
-  .flex-form {
-    display: -webkit-box;
-    display: flex;
-    width: 200px;
-    border-radius: 30px;
-    box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.3);
-  }
 }
 
-@media only screen and (max-width: 1138px){
+@media only screen and (max-width: 1221px){
 
- .flex-form{
+  ul {
+    padding-left: 5px;
+  }
+
+  nav {
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+  }
+
+}
+
+@media only screen and (max-width: 1170px) {
+  .flex-form {
     display: none;
   }
 
-  ul{
+  ul {
     position: absolute;
     top: 10.8%;
     left: 0;
-    background: #A31519;
+    background: #a31519;
     height: 0;
     width: 100%;
     overflow: hidden;
     transition: ease-in 0.2s;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
   }
 
-a{
-  color: white;
-}
+  ul a {
+    color: white;
+  }
 
-.menu{
-  display: block;
-}
+  .menu {
+    display: block;
+  }
 
-  .hero-col-2-right{
+  .hero-col-2-right {
     display: none;
   }
 
@@ -617,17 +634,31 @@ a{
     flex-basis: 100%;
   }
 
-  .hero-col-2-left{
-   text-align: center;
+  .hero-col-2-left {
+    text-align: center;
   }
-  .hero-buttons{
+  .hero-buttons {
     margin: 0 auto;
   }
-  
 }
 
-@media only screen and (max-width: 480px){
-  .flex-col, .who-we-are .flex-col, .products .flex-row, .image-row{
+@media only screen and (max-width: 710px) {
+  .form-container {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 644px) {
+  .form-featured {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .flex-col,
+  .who-we-are .flex-col,
+  .products .flex-row,
+  .image-row {
     width: 100%;
   }
 
@@ -635,18 +666,30 @@ a{
     width: 70%;
   }
 
-  .partner-image{
+  .partner-image {
     width: 150px;
     height: 70px;
   }
-h1{
-  margin-top: 40px;
+  h1 {
+    margin-top: 40px;
+  }
 }
 
+@media only screen and (max-width: 580px) {
+  .footer-right,
+  .footer-left {
+    flex-basis: 100%;
+  }
 }
 
-@media only screen and (max-width: 580px){
-.footer-right, .footer-left{
-  flex-basis: 100%;
-}
-}
+/* 
+@media only screen and (max-width: 568px){
+  ul{
+    flex-wrap: nowrap;
+  }
+  ul a{
+    display: block;
+    margin: 0 auto;
+    border: 1px solid blue;
+  }
+  } */
