--- a/style.css
+++ b/style.css
@@ -12,16 +12,10 @@
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
 }
-/* 
-body{
-  background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
-} */
 
-/* body::before{
-    display: block;
-    content: '';
-    height: 60px;
-} */
+html{
+  scroll-behavior: smooth;
+}
 
 header {
   width: 100%;
